--- a/3_3_map_and_apply.ipynb
+++ b/3_3_map_and_apply.ipynb
@@ -1154,11 +1154,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ExhibitionID</th>\n",
+       "      <th>ExhibitionNumber</th>\n",
+       "      <th>ExhibitionTitle</th>\n",
+       "      <th>ExhibitionCitationDate</th>\n",
+       "      <th>ExhibitionBeginDate</th>\n",
+       "      <th>ExhibitionEndDate</th>\n",
+       "      <th>ExhibitionSortOrder</th>\n",
+       "      <th>ExhibitionURL</th>\n",
+       "      <th>ExhibitionRole</th>\n",
+       "      <th>ExhibitionRoleinPressRelease</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Institution</th>\n",
+       "      <th>Nationality</th>\n",
+       "      <th>ConstituentBeginDate</th>\n",
+       "      <th>ConstituentEndDate</th>\n",
+       "      <th>ArtistBio</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>VIAFID</th>\n",
+       "      <th>WikidataID</th>\n",
+       "      <th>ULANID</th>\n",
+       "      <th>ConstituentURL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2557.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cézanne, Gauguin, Seurat, Van Gogh</td>\n",
+       "      <td>[MoMA Exh. #1, November 7-December 7, 1929]</td>\n",
+       "      <td>1929-11-07</td>\n",
+       "      <td>1929-12-07</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>moma.org/calendar/exhibitions/1767</td>\n",
+       "      <td>Curator</td>\n",
+       "      <td>Director</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>American</td>\n",
+       "      <td>1902</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>American, 19021981</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>109252853.0</td>\n",
+       "      <td>Q711362</td>\n",
+       "      <td>500241556.0</td>\n",
+       "      <td>moma.org/artists/9168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2557.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cézanne, Gauguin, Seurat, Van Gogh</td>\n",
+       "      <td>[MoMA Exh. #1, November 7-December 7, 1929]</td>\n",
+       "      <td>1929-11-07</td>\n",
+       "      <td>1929-12-07</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>moma.org/calendar/exhibitions/1767</td>\n",
+       "      <td>Artist</td>\n",
+       "      <td>Artist</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>French</td>\n",
+       "      <td>1839</td>\n",
+       "      <td>1906</td>\n",
+       "      <td>French, 18391906</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>39374836.0</td>\n",
+       "      <td>Q35548</td>\n",
+       "      <td>500004793.0</td>\n",
+       "      <td>moma.org/artists/1053</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 28 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ExhibitionID ExhibitionNumber                     ExhibitionTitle  \\\n",
+       "0        2557.0                1  Cézanne, Gauguin, Seurat, Van Gogh   \n",
+       "1        2557.0                1  Cézanne, Gauguin, Seurat, Van Gogh   \n",
+       "\n",
+       "                        ExhibitionCitationDate ExhibitionBeginDate  \\\n",
+       "0  [MoMA Exh. #1, November 7-December 7, 1929]          1929-11-07   \n",
+       "1  [MoMA Exh. #1, November 7-December 7, 1929]          1929-11-07   \n",
+       "\n",
+       "  ExhibitionEndDate  ExhibitionSortOrder                       ExhibitionURL  \\\n",
+       "0        1929-12-07                  1.0  moma.org/calendar/exhibitions/1767   \n",
+       "1        1929-12-07                  1.0  moma.org/calendar/exhibitions/1767   \n",
+       "\n",
+       "  ExhibitionRole ExhibitionRoleinPressRelease  ...  Institution Nationality  \\\n",
+       "0        Curator                     Director  ...          NaN    American   \n",
+       "1         Artist                       Artist  ...          NaN      French   \n",
+       "\n",
+       "  ConstituentBeginDate ConstituentEndDate            ArtistBio Gender  \\\n",
+       "0                 1902               1981  American, 19021981   Male   \n",
+       "1                 1839               1906    French, 18391906   Male   \n",
+       "\n",
+       "        VIAFID WikidataID       ULANID         ConstituentURL  \n",
+       "0  109252853.0    Q711362  500241556.0  moma.org/artists/9168  \n",
+       "1   39374836.0     Q35548  500004793.0  moma.org/artists/1053  \n",
+       "\n",
+       "[2 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "data_columns = ['ExhibitionBeginDate', 'ExhibitionEndDate', 'ConstituentBeginDate', 'ConstituentEndDate']\n",
+    "exhibitions = pd.read_csv('./data/MOMAExhibitions1929to1989.csv',\n",
+    "              encoding=\"ISO-8859-1\",\n",
+    "              parse_dates=data_columns)\n",
+    "exhibitions.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Curator', 'Artist', nan, 'Arranger', 'Installer',\n",
+       "       'Competition Judge', 'Designer', 'Preparer'], dtype=object)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exhibitions.ExhibitionRole.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "from composable import pipeable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indicator = pipeable(lambda indicator, role: 1 if role == indicator else 0)"
    ]
   },
   {
@@ -1171,7 +1346,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 64-bit ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -1215,6 +1390,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "473b41802f15bc4d36e58363591c00526b25180ec7618bd57a0904bb7f368ffa"
+   }
   }
  },
  "nbformat": 4,
