modified:   3_1_string_transformations.ipynb 	modified:   3_3_map_and_apply.ipynb 	modified:   3_4_mutate_three_helpful_column_functions.ipynb

--- a/3_1_string_transformations.ipynb
+++ b/3_1_string_transformations.ipynb
@@ -2966,7 +2966,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 64-bit ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -3010,6 +3010,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "473b41802f15bc4d36e58363591c00526b25180ec7618bd57a0904bb7f368ffa"
+   }
   }
  },
  "nbformat": 4,
